2005-02-04  Naba Kumar  <naba@gnome.org>

	* plugins/glade/plugin.c: Fixed glade function calls.
	* configure.in: Fixed a typo.
	* TODO.tasks: Updated.

2005-02-03  Naba Kumar  <naba@gnome.org>

	* plugins/project-manager/plugin.c: Fixed memory corruption.

	* plugins/build-basic-autotools/build-basic-autotools.c: Fixed
	build error.
	
	* manuals/reference/libanjuta/tmpl/ianjuta-buildable.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-project-manager.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml: Updated.

	* libanjuta/interfaces/libanjuta.idl,
	plugins/project-manager/plugin.c: Implemented IAnjutaProjectManager
	interface.
	
	* plugins/symbol-browser/an_symbol_view.c: Fixed memory leaks.

	Patch from Massimo Cora <maxcvs@email.it>:
	* plugins/editor/plugin.c: Fixed update UI for created buffers.
	
2005-02-01  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-launcher.c, libanjuta/anjuta-launcher.h,
	libanjuta/anjuta-utils.c, libanjuta/anjuta-utils.h,
	plugins/editor/goto_line.c, plugins/editor/goto_line.h,
	scintilla/ScintillaGTK.cxx, scintilla/include/ScintillaWidget.h,
	(new) scintilla/patches/a64-crash-fix.patch: Applied old patches
	from sourceforge -- a64 crash fixes (correct typing for GType)
	and fixes compile errors in sun.

	* plugins/terminal/terminal.c: Patch from sourceforge -- Fixes
	paste (shift+insert) in terminal.

2005-02-01  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2005-02-01  Naba Kumar  <naba@gnome.org>

	* TODO.tasks, TODO: Updated todo tasks.
	
	* plugins/editor/anjuta-document-manager.glade: Improved search
	relace dialog.
	
	* TODO.tasks: Fixed xml format.
	
	* plugins/editor/aneditor.cxx: Added code to trap 'tab' key (does not
	work yet).
	
	* plugins/editor/text_editor.c, plugins/editor/text_editor.h: Code
	cleanups.
	
	* plugins/gtodo/interface.c, plugins/gtodo/libgtodo.c: Fixed xml